--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: php
 php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - hhvm
-script: phpunit ForkerTest.php
+  - 7.4
+  - 8.0
+install: composer install
+script: vendor/bin/phpunit ForkerTest.php
